--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -43,7 +43,7 @@
 
 .submit, .logout {
   border-radius: 10px; 
-  margin-top: 20px; 
+  margin-top: 10px; 
   background: lightblue;
   height: 30px; 
   width: 70px; 
@@ -60,4 +60,9 @@
 
 .tweet-links {
   width: 100%; 
+}
+
+
+.chirper {
+  padding-top: 1px; 
 }
