--- a/frontend/src/components/session/session.css
+++ b/frontend/src/components/session/session.css
@@ -6,19 +6,49 @@
 .submit {
   border-radius: 10px; 
   margin-top: 20px; 
-  background: lightblue;
+  background: 008FB8;
   height: 30px; 
   width: 70px; 
+  margin-bottom: 15px; 
 }
 
 .submit:hover {
-  background: lightgreen;
+  background: #1D60E0;
   cursor: pointer 
 }
 
 .login-form-container {
   margin-top: 30px; 
-  border: 2px solid white; 
-  background: #86F9FB;
+  background: #008FB8;
   border-radius: 10px; 
 }
+
+.session-container {
+  /* border: 20px solid gray; */
+}
+
+.login-form input {
+  margin: 10px; 
+  padding: 5px; 
+  border-radius: 5px;
+  
+
+	border: none;
+	padding: 5px;
+	font: 14px;
+	cursor: pointer;
+	outline: inherit;
+}
+
+
+button {
+  all: unset;
+  color: blue;
+  -webkit-text-fill-color: blue;
+  cursor: pointer;
+}
+
+button:focus {
+  outline: orange 5px auto;
+}
+
